--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.14",
+        "hyperf/di": "^2.1",
+        "hyperf/testing": "^2.1",
+        "hyperf/utils": "^2.1",
         "mockery/mockery": "^1.0",
         "phpstan/phpstan": "^0.12",
         "phpunit/phpunit": ">=7.0",
@@ -36,7 +39,7 @@
         "sort-packages": true
     },
     "scripts": {
-        "test": "phpunit -c phpunit.xml --colors=always",
+        "test": "co-phpunit -c phpunit.xml --colors=always",
         "analyse": "phpstan analyse --memory-limit 1024M -l 0 ./src",
         "cs-fix": "php-cs-fixer fix $1"
     },
