--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require": {
         "php": ">=7.3",
-        "hyperf/db": "^2.1"
+        "hyperf/db": "2.1.x-dev"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.14",
